--- a/home.html
+++ b/home.html
@@ -5,12 +5,16 @@
     <title>The Thermostat</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@350&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
   <body>
-    <img src ='therm.png' class="icon">
+      <div class='row'>
+          <img src ='therm.png' class="icon">
+          <h3>Personas & Storyboarding: Nest Thermostat</h3>
+    </div>
     <h1>Overview</h1>
     <p>This project hones in on developing personas and storyboards. For this project I chose a public facing interface (a Nest thermostat) and then observed how real users interact with it. After conducting follow up interviews, I created two personas and a storyboard for one persona. Personas provide user models that allow designers to evaluate designs and best meet a user’s needs. The goal of this project was to practice stepping into a user’s shoes and develop greater user empathy. Along the way, I learned more about users’ mental models and how to turn interviews and observations into real insights.</p>
     <h1>Sketch & Description</h1>
@@ -155,5 +159,12 @@
     <h1>Storyboard</h1>
     <p>This storyboard depicts High Maintenance Harry navigating one of his first nights at school.</p>
         <img src='storyboard.png' class="story">
+    <h1>Takeaways</h1>
+    <ul>
+        <li>The key differentiators of the Nest thermostat are the more intricate features such as scheduling changes, connecting to a mobile app, and the display screen. While most users originally said they only use a thermostat to change the temperatures, later on they expressed interest in these additional features. </li>
+        <li>Nest’s interface, while more high tech than other thermostats, could actually become more usable by becoming more high tech and including a touch screen. The prevalence of touch screens for mobile phones means users are used to interacting with display screens this way and multiple users thought it would be a touch screen.</li>
+        <li>While the Conscientious Cam persona expressed some difficulty with the interface (“I feel like an old person”), this was not because the interface was too high tech, but rather because the limited ways users can interact with the interface (twisting and clicking). Therefore, a touch screen could actually help these users accomplish their goals as well because a touch screen would allow for easier interaction with the settings screen and provide a back button which a user also requested.</li>
+        <li>Lastly, I would like to thank everyone who let me observe and interview them. I gained many important insights from my users. I learned that sometimes what a user doesn't do or doesn't say is just as important as what they do or say.</li>
+    </ul>
   </body>
 </html>
